--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "blade-ui-kit/blade-heroicons": "^2.6",
         "laravel/framework": "^11.31",
         "laravel/socialite": "^5.18",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "livewire/livewire": "^3.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
