--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.3",
+        "bootstrap-icons": "^1.11.3",
         "sass": "^1.85.0"
     }
 }
