invoice list and invoice pdf

--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,18 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-snappy": "^1.0",
         "blade-ui-kit/blade-heroicons": "^2.6",
         "laravel/framework": "^11.31",
         "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
-        "livewire/livewire": "^3.6"
+        "livewire/livewire": "^3.6",
+        "mpdf/mpdf": "^6.1",
+        "tecnickcom/tcpdf": "^6.8"
     },
     "require-dev": {
+        "blade-ui-kit/blade-icons": "*",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
