--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/ui": "^4.6",
         "livewire/livewire": "^3.6",
         "mpdf/mpdf": "^6.1",
+        "sprain/swiss-qr-bill": "^4.20",
         "tecnickcom/tcpdf": "^6.8"
     },
     "require-dev": {
